Correction : ajout du cursor:ponter pour le bouton de recherche de la version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,7 @@ footer {
         position : absolute;
         right : 20px;
         filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.3));
+        cursor: pointer;
     }
 
     .filter__button {
